--- a/Simple Calculator/.gitignore
+++ b/Simple Calculator/.gitignore
@@ -1,10 +1,11 @@
 *.iml
 .gradle
 .idea/*
-./build.gradle
-./gradle.properties
-./gradlew
-./gradlew.bat
+build.gradle
+gradle.properties
+gradlew
+gradlew.bat
+settings.gradle
 ./local.properties
 ./local.properties
 /local.properties
